...
          Consumer<WatchlistService>(
            builder: (context, watchlistService, child) {
              final isWatchlisted = watchlistService.containsSpecies(
                widget.species.species.id,
              );
              return IconButton(
                key: const Key('species_detail_watchlist_button'),
                tooltip: isWatchlisted
                    ? context.loc.watchListRemove
                    : context.loc.watchListAdd,
                icon: Icon(
                  isWatchlisted ? Icons.bookmark : Icons.bookmark_border,
                ),
...
